--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!--====== Title ======-->
-    <title>Furnish - Furniture and Decor Website Template</title>
+    <title>Housewase</title>
     
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
@@ -75,19 +75,19 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul id="nav" class="navbar-nav ml-auto">
                                 <li class="nav-item active">
-                                    <a data-scroll-nav="0" href="#home">Home</a>
+                                    <a data-scroll-nav="0" href="#home">Trang chủ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a data-scroll-nav="0" href="#product">Products</a>
+                                    <a data-scroll-nav="0" href="#product">Sản Phẩm</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a data-scroll-nav="0" href="#cart">Cart</a>
+                                    <a data-scroll-nav="0" href="#cart">Giỏ hàng</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a data-scroll-nav="0" href="#profile">Profile</a>
+                                    <a data-scroll-nav="0" href="#profile">Hồ sơ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a data-scroll-nav="0" href="#contact">Contact</a>
+                                    <a data-scroll-nav="0" href="#contact">Liên hệ</a>
                                 </li>
                             </ul> <!-- navbar nav -->
                         </div>
@@ -117,7 +117,7 @@
                             </div>
                             <div class="col-lg-8 col-md-7">
                                 <div class="slider-product-content">
-                                    <h1 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s"><span>Sofa</span> and <span>Armchairs</span></h1>
+                                    <h1 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s"><span>Đại tiệc siêu to</span> và <span>Ưu đãi siêu khủng</span></h1>
                                     <p class="mb-25" data-animation="fadeInUp" data-delay="0.9s">One day however a small line of blind text by the name of Lorem Ipsum <br> decided to leave for the far World of Grammar.</p>
                                     <a class="main-btn" href="#" data-animation="fadeInUp" data-delay="1.5s">Explore More <i class="lni-chevron-right"></i></a>
                                 </div> <!-- slider product content -->
