--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -89,6 +89,9 @@
                                 <li class="nav-item">
                                     <a data-scroll-nav="0" href="#contact">Liên hệ</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a data-scroll-nav="0" href="#">Đăng nhập</a>
+                                </li>
                             </ul> <!-- navbar nav -->
                         </div>
                     </nav> <!-- navbar -->
@@ -109,7 +112,7 @@
                         <div class="row no-gutters align-items-center ">
                             <div class="col-lg-4 col-md-5">
                                 <div class="slider-product-image d-none d-md-block">
-                                    <img src="assets/images/slider/1.jpg" alt="Slider">
+                                    <img src="assets/images/blog/bep.jpg" alt="Slider">
                                     <div class="slider-discount-tag">
                                         <p>-50% <br> OFF</p>
                                     </div>
@@ -117,9 +120,9 @@
                             </div>
                             <div class="col-lg-8 col-md-7">
                                 <div class="slider-product-content">
-                                    <h1 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s"><span>Đại tiệc siêu to</span> và <span>Ưu đãi siêu khủng</span></h1>
-                                    <p class="mb-25" data-animation="fadeInUp" data-delay="0.9s">One day however a small line of blind text by the name of Lorem Ipsum <br> decided to leave for the far World of Grammar.</p>
-                                    <a class="main-btn" href="#" data-animation="fadeInUp" data-delay="1.5s">Explore More <i class="lni-chevron-right"></i></a>
+                                    <h1 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s"><span>Tinh tế</span> <br> & <span>   đẳng cấp</span></h1>
+                                    <p class="mb-25" data-animation="fadeInUp" data-delay="0.9s">Sở hữu thiết kế ấn tượng bởi những đường nét đơn giản, tinh tế <br> Nổi bật với thiết kế thời thượng làm nổi bật không gian bếp của gia đình Việt.</p>
+                                    <a class="main-btn" href="#" data-animation="fadeInUp" data-delay="1.5s">Xem thêm <i class="lni-chevron-right"></i></a>
                                 </div> <!-- slider product content -->
                             </div>
                         </div> <!-- row -->
