--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -134,7 +134,7 @@
                             <div class="row no-gutters align-items-center">
                                 <div class="col-lg-4 col-md-5">
                                     <div class="slider-product-image d-none d-md-block">
-                                        <img src="assets/images/slider/3.jpg" alt="Slider">
+                                        <img src="assets/images/blog/bep2.jpg" alt="Slider">
                                         <div class="slider-discount-tag">
                                             <p>-20% <br> OFF</p>
                                         </div>
@@ -142,9 +142,9 @@
                                 </div>
                                 <div class="col-lg-8 col-md-7">
                                     <div class="slider-product-content">
-                                        <h1 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s"><span>Winter</span> Sale! is <span>Here</span></h1>
-                                        <p class="mb-25" data-animation="fadeInUp" data-delay="0.9s">One day however a small line of blind text by the name of Lorem Ipsum <br> decided to leave for the far World of Grammar.</p>
-                                        <a class="main-btn" href="#" data-animation="fadeInUp" data-delay="1.5s">Explore More <i class="lni-chevron-right"></i></a>
+                                        <h2 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s"><span>Giòn thơm<br> & ít dầu mỡ</span></h2>
+                                        <p class="mb-25" data-animation="fadeInUp" data-delay="0.9s">Sở hữu thiết kế ấn tượng bởi những đường nét đơn giản, tinh tế <br> Nổi bật với thiết kế thời thượng làm nổi bật không gian bếp của gia đình Việt.</p>
+                                        <a class="main-btn" href="#" data-animation="fadeInUp" data-delay="1.5s">Xem thêm <i class="lni-chevron-right"></i></a>
                                     </div> <!-- slider product content -->
                                 </div>
                             </div> <!-- row -->
@@ -156,16 +156,16 @@
                             <div class="row no-gutters align-items-center">
                                 <div class="col-lg-4 col-md-5">
                                     <div class="slider-product-image d-none d-md-block">
-                                        <img src="assets/images/slider/2.jpg" alt="Slider">
+                                        <img src="assets/images/blog/bep1.jpg" alt="Slider">
                                         <div class="slider-discount-tag">
-                                            <p>FREE<br> QUOTE</p>
+                                            <p>-30%<br> Sale off!</p>
                                         </div>
                                     </div> <!-- slider product image -->
                                 </div>
                                 <div class="col-lg-8 col-md-7">
                                     <div class="slider-product-content">
-                                        <h1 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s"><span>Get</span> a Free <span>Quote</span></h1>
-                                        <p class="mb-25" data-animation="fadeInUp" data-delay="0.9s">One day however a small line of blind text by the name of Lorem Ipsum <br> decided to leave for the far World of Grammar.</p>
+                                        <h1 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s"><span>Sốc</span>Siêu giảm giá <span></span></h1>
+                                        <p class="mb-25" data-animation="fadeInUp" data-delay="0.9s">Sở hữu thiết kế ấn tượng bởi những đường nét đơn giản, tinh tế <br> Nổi bật với thiết kế thời thượng làm nổi bật không gian bếp của gia đình Việt.</p>
                                         <a class="main-btn" href="#contact" data-animation="fadeInUp" data-delay="1.5s">Contact Us <i class="lni-chevron-right"></i></a>
                                     </div> <!-- slider product content -->
                                 </div>
