create login.html quenMK.htm sign-up.html
tạo form đăng nhập đăng ký quên mật khẩu

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -90,7 +90,7 @@
                                     <a data-scroll-nav="0" href="#contact">Liên hệ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a data-scroll-nav="0" href="#">Đăng nhập</a>
+                                    <a href="account/login">Đăng nhập</a>
                                 </li>
                             </ul> <!-- navbar nav -->
                         </div>
