--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -166,7 +166,7 @@
                                     <div class="slider-product-content">
                                         <h1 class="slider-title mb-10" data-animation="fadeInUp" data-delay="0.3s"><span>Get</span> a Free <span>Quote</span></h1>
                                         <p class="mb-25" data-animation="fadeInUp" data-delay="0.9s">One day however a small line of blind text by the name of Lorem Ipsum <br> decided to leave for the far World of Grammar.</p>
-                                        <a class="main-btn" href="#contact" data-animation="fadeInUp" data-delay="1.5s">Contact Us <i class="lni-chevron-right"></i></a>
+                                        <a class="main-btn" href="#contact" data-animation="fadeInUp" data-delay="1.5s">Liên hệ ngay <i class="lni-chevron-right"></i></a>
                                     </div> <!-- slider product content -->
                                 </div>
                             </div> <!-- row -->
