--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,22 +27,20 @@
 						</div>
 						<div class="card-body">
 							<div class="form-group">
-								<label for="username">Username</label> <input type="text"
+								<label for="username">Tên tài khoản:</label> <input type="text"
 									class="form-control" name="username" id="username"
-									aria-describedby="UsernameId" placeholder="Username"> <small
-									id="UsernameId" class="form-text text-muted">Username
-									is Required!</small>
+									aria-describedby="UsernameId" placeholder="Tài khoản"> <small
+									id="UsernameId" class="form-text text-muted">Tài khoản là bắt buộc!</small>
 							</div>
 							<div class="form-group">
-								<label for="password">Password</label> <input type="password"
+								<label for="password">Mật khẩu:</label> <input type="password"
 									class="form-control" name="password" id="password"
-									aria-describedby="PasswordId" placeholder="Password"> <small
-									id="PasswordId" class="form-text text-muted">Password
-									is Required!</small>
+									aria-describedby="PasswordId" placeholder="Mật khẩu"> <small
+									id="PasswordId" class="form-text text-muted">Mật khẩu là bắt buộc!</small>
 							</div>
 							<div class="form-check form-check-inline">
 								<label> <input class="form-check-input" type="radio"
-									name="remember"> Remmember me?
+									name="remember"> Lưu tài khoản?
 								</label>
 							</div>
 						</div>
