--- a/src/main/resources/templates/quenMK.html
+++ b/src/main/resources/templates/quenMK.html
@@ -23,10 +23,10 @@
                         </div>
                         <div class="card-body">
                             <div class="form-group">
-                                <label for="username">Username</label>
+                                <label for="username">Tên tài khoản:</label>
                                 <input type="text" class="form-control" name="username" id="username"
-                                    aria-describedby="UsernameId" placeholder="Username">
-                                <small id="UsernameId" class="form-text text-muted">Username is Required!</small>
+                                    aria-describedby="UsernameId" placeholder="Tài khoản">
+                                <small id="UsernameId" class="form-text text-muted">Tài khoản là bát buộc!</small>
                             </div>
                             <div class="form-group">
                                 <label for="email">Email</label>
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                         <div class="card-footer text-muted">
-                            <button class="btn btn-success">Gữi mail</button>
+                            <button class="btn btn-success">Gửi mail</button>
                             <label class="mx-3"></label>
                             <label class="mx-5"><a href="http://localhost:8080/index" class="text-dark">Trang chủ</a></label>
                         </div>
