--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -31,18 +31,16 @@
 						<div class="row">
 							<div class="col">
 								<div class="form-group">
-									<label for="username">Username</label> <input type="text"
+									<label for="username">Tên tài khoản</label> <input type="text"
 										class="form-control" name="id" id="username"
 										aria-describedby="UsernameId" placeholder="Username">
-									<small id="UsernameId" class="form-text text-muted">Username
-										is Required!</small>
+									<small id="UsernameId" class="form-text text-muted">Tài khoản là bắt buộc!</small>
 								</div>
 								<div class="form-group">
-									<label for="fullname">Fullname</label> <input type="text"
+									<label for="fullname">Họ và tên: </label> <input type="text"
 										class="form-control" name="fullname" id="fullname"
-										aria-describedby="FullnameId" placeholder="Fullname">
-									<small id="FullnameId" class="form-text text-muted">Fullname
-										is Required!</small>
+										aria-describedby="FullnameId" placeholder="Họ Tên">
+									<small id="FullnameId" class="form-text text-muted">Họ và tên là bắt buộc!</small>
 								</div>
 							</div>
 							<div class="col">
@@ -55,8 +53,7 @@
 									<label for="email">Email</label> <input type="text"
 										class="form-control" name="email" id="email"
 										aria-describedby="EmailId" placeholder="Email"> <small
-										id="EmailId" class="form-text text-muted">Email is
-										Required!</small>
+										id="EmailId" class="form-text text-muted">Email là bắt buộc!</small>
 								</div>
 								<div class="form-group">
 									<input name="admin" type="radio" value="true">Admin 
