--- a/src/main/resources/templates/chitietsanpham.html
+++ b/src/main/resources/templates/chitietsanpham.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!--====== Title ======-->
-	<title>Furnish - Furniture and Decor Website Template</title>
+	<title>HouseWase</title>
 
 	<!--====== Favicon Icon ======-->
 	<link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
@@ -74,19 +74,22 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul id="nav" class="navbar-nav ml-auto">
                                 <li class="nav-item active">
-                                    <a data-scroll-nav="0" href="#home">Home</a>
+                                    <a data-scroll-nav="0" href="#home">Trang chủ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a data-scroll-nav="0" href="#product">Products</a>
+                                    <a data-scroll-nav="0" href="#product">Sản Phẩm</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a data-scroll-nav="0" href="#cart">Cart</a>
+                                    <a data-scroll-nav="0" href="#cart">Giỏ hàng</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a data-scroll-nav="0" href="#profile">Profile</a>
+                                    <a data-scroll-nav="0" href="#profile">Hồ sơ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a data-scroll-nav="0" href="#contact">Contact</a>
+                                    <a data-scroll-nav="0" href="#contact">Liên hệ</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="account/login">Đăng nhập</a>
                                 </li>
                             </ul> <!-- navbar nav -->
                         </div>
