--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@
 				<form action="" method="post">
 					<div class="card">
 						<div class="card-header">
-							<b>Login to system</b>
+							<b>Đăng nhập</b>
 						</div>
 						<div class="card-body">
 							<div class="form-group">
