--- a/src/main/resources/templates/quenMK.html
+++ b/src/main/resources/templates/quenMK.html
@@ -19,14 +19,14 @@
                 <form action="" method="post">
                     <div class="card mt-5">
                         <div class="card-header">
-                            <b>Forgot password</b>
+                            <b>Quên mật khẩu</b>
                         </div>
                         <div class="card-body">
                             <div class="form-group">
                                 <label for="username">Tên tài khoản:</label>
                                 <input type="text" class="form-control" name="username" id="username"
                                     aria-describedby="UsernameId" placeholder="Tài khoản">
-                                <small id="UsernameId" class="form-text text-muted">Tài khoản là bát buộc!</small>
+                                <small id="UsernameId" class="form-text text-muted">Tài khoản là bắt buộc!</small>
                             </div>
                             <div class="form-group">
                                 <label for="email">Email</label>
