--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -15,9 +15,8 @@
 <body>
     <div class="container">
         <div class="logo">
-            <span><h1>Giao Diện admin</h1></span>
+            <span><h1>Giao Diện Admin</h1></span>
         </div>
-
         <div class="note-card">
             <h3>Danh sách quản lý</h3>
         </div>
@@ -26,6 +25,7 @@
             <div class="col-md-4">
                 <div class="product-card">
                     <div class="card-body" onclick="window.location.href='admin/quanLyUser'">
+                    
                         <h5 class="card-title"><a href="admin/quanLyUser">Quản lý tài khoản</a></h5>
                     </div>
                 </div>
