--- a/src/main/resources/templates/admin/quanLyDonHang.html
+++ b/src/main/resources/templates/admin/quanLyDonHang.html
@@ -22,7 +22,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <h1>Giao Diện admin</h1>
+            <h1>Giao Diện Admin</h1>
         </div>
 
         <div class="note-card">
