--- a/src/main/resources/templates/admin/quanLyProduct.html
+++ b/src/main/resources/templates/admin/quanLyProduct.html
@@ -22,7 +22,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <h1>Giao Diện admin</h1>
+            <h1>Giao Diện Admin</h1>
         </div>
 
         <div class="note-card">
@@ -105,9 +105,9 @@
                         </div>
                         <div class="row mt-2">
                             <div class="col-md-12">
-                                <button type="submit" class="btn btn-primary">thêm</button>
-                                <button type="submit" class="btn btn-primary ml-2">Sửa</button>
-                                <button type="submit" class="btn btn-primary ml-2">Xóa</button>
+                               <button type="submit" class="btn btn-info">thêm</button>
+                                    <button type="submit"  class="btn btn-success ml-2">Sửa</button>
+                                    <button type="submit"  class="btn btn-danger ml-2">Xóa</button>
                             </div>
                         </div>
                     </form>
