--- a/src/main/resources/templates/admin/quanLyUser.html
+++ b/src/main/resources/templates/admin/quanLyUser.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="logo">
             <span>
-                <h1>Giao Diện admin</h1>
+                <h1>Giao Diện Admin</h1>
             </span>
         </div>
 
@@ -113,8 +113,8 @@
                     </div>
                     <div class="row mt-2">
                         <div class="col-md-12">
-                            <button type="submit" class="btn btn-primary">Sửa</button>
-                            <button type="submit" class="btn btn-primary ml-2">Xóa</button>
+                            <button type="submit"  class="btn btn-success">Sửa</button>
+                            <button type="submit"  class="btn btn-danger ml-2">Xóa</button>
                         </div>
                     </div>
                     </form>
