--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
 <title>Title</title>
@@ -32,32 +32,46 @@
 							<div class="col">
 								<div class="form-group">
 									<label for="username">Tên tài khoản</label> <input type="text"
-										class="form-control" name="id" id="username"
+										class="form-control" th:field="${user.username}" id="username"
 										aria-describedby="UsernameId" placeholder="Username">
+										 <div class="alert alert-warning" th:errors="${user.username}"></div>
 									<small id="UsernameId" class="form-text text-muted">Tài khoản là bắt buộc!</small>
 								</div>
 								<div class="form-group">
 									<label for="fullname">Họ và tên: </label> <input type="text"
-										class="form-control" name="fullname" id="fullname"
+										class="form-control" th:field="${user.fullname}" id="fullname"
 										aria-describedby="FullnameId" placeholder="Họ Tên">
+										 <div class="alert alert-warning" th:errors="${user.fullname}"></div>
 									<small id="FullnameId" class="form-text text-muted">Họ và tên là bắt buộc!</small>
 								</div>
 							</div>
 							<div class="col">
 								<div class="form-group">
 									<label for="password">Password</label> <input type="password"
-										class="form-control" name="password" id="password"
+										class="form-control" th:field="${user.password}" id="password"
 										placeholder="Password">
+										 <div class="alert alert-warning" th:errors="${user.password}"></div>
 								</div>
 								<div class="form-group">
 									<label for="email">Email</label> <input type="text"
-										class="form-control" name="email" id="email"
-										aria-describedby="EmailId" placeholder="Email"> <small
-										id="EmailId" class="form-text text-muted">Email là bắt buộc!</small>
+										class="form-control" th:field="${user.email}" id="email"
+										aria-describedby="EmailId" placeholder="Email"> 
+										 <div class="alert alert-warning" th:errors="${user.email}"></div>
+										<small id="EmailId" class="form-text text-muted">Email là bắt buộc!</small>
 								</div>
 								<div class="form-group">
-									<input name="admin" type="radio" value="true">Admin 
-									<input name="admin" type="radio" value="false">User
+									 <div class="form-check">
+            							<label class="form-check-label">
+                							<input class="form-check-input" type="radio" name="isAdmin" th:value="true">
+                						Admin
+            							</label>
+        							</div>
+        							<div class="form-check">
+            							<label class="form-check-label">
+                							<input class="form-check-input" type="radio" name="isAdmin" th:value="false" checked>
+                						User
+           								</label>
+        							</div>
 								</div>
 							</div>
 
