--- a/src/main/resources/templates/chitietsanpham.html
+++ b/src/main/resources/templates/chitietsanpham.html
@@ -111,7 +111,7 @@
 						<div class="row no-gutters align-items-center ">
 							<div class="col-lg-4 col-md-5">
 								<div class="slider-product-image d-none d-md-block">
-									<img src="assets/images/slider/1.jpg" alt="Slider">
+									<img src="assets/images/product/pro1.jpg" alt="Slider">
 								</div> <!-- slider product image -->
 							</div>
 							<div class="col-lg-8 col-md-7">
@@ -125,6 +125,7 @@
 											<div class="single-product-items">
 												<div class="product-item-content text-left mt-30">
 													<ul class="rating">
+														<li><i class="lni-star-filled"></i></li>
 														<li><i class="lni-star-filled"></i></li>
 														<li><i class="lni-star-filled"></i></li>
 														<li><i class="lni-star-filled"></i></li>
@@ -148,7 +149,7 @@
 						<div class="row no-gutters align-items-center">
 							<div class="col-lg-4 col-md-5">
 								<div class="slider-product-image d-none d-md-block">
-									<img src="assets/images/slider/3.jpg" alt="Slider">
+									<img src="assets/images/product/pro2.jpg" alt="Slider">
 								</div> <!-- slider product image -->
 							</div>
 							<div class="col-lg-8 col-md-7">
@@ -184,7 +185,7 @@
 						<div class="row no-gutters align-items-center">
 							<div class="col-lg-4 col-md-5">
 								<div class="slider-product-image d-none d-md-block">
-									<img src="assets/images/slider/2.jpg" alt="Slider">
+									<img src="assets/images/product/pro3.jpg" alt="Slider">
 
 								</div> <!-- slider product image -->
 							</div>
@@ -246,7 +247,7 @@
                                     <div class="col-md-3">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/p-1.jpg" alt="Product"></a>
+                                                <a href="#"><img src="assets/images/product/pro1.jpg" alt="Product"></a>
                                                 <div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>
@@ -254,6 +255,7 @@
                                             <div class="product-item-content text-center mt-30">
                                                 <h5 class="product-title"><a href="#">Fibre Chair</a></h5>
                                                 <ul class="rating">
+                                                    <li><i class="lni-star-filled"></i></li>
                                                     <li><i class="lni-star-filled"></i></li>
                                                     <li><i class="lni-star-filled"></i></li>
                                                     <li><i class="lni-star-filled"></i></li>
@@ -267,7 +269,7 @@
                                     <div class="col-md-3">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/p-2.jpg" alt="Product"></a>
+                                                <a href="#"><img src="assets/images/product/pro2.jpg" alt="Product"></a>
                                                 <div class="product-discount-tag">
                                                     <p>-20%</p>
                                                 </div>
@@ -288,7 +290,7 @@
                                     <div class="col-md-3">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/p-3.jpg" alt="Product"></a>
+                                                <a href="#"><img src="assets/images/product/pro3.jpg" alt="Product"></a>
                                                 <div class="product-discount-tag">
                                                     <p>-10%</p>
                                                 </div>
@@ -309,7 +311,7 @@
                                     <div class="col-md-3">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/p-1.jpg" alt="Product"></a>
+                                                <a href="#"><img src="assets/images/product/pro2.jpg" alt="Product"></a>
                                                 <div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>
@@ -330,7 +332,7 @@
                                     <div class="col-md-3">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/p-2.jpg" alt="Product"></a>
+                                                <a href="#"><img src="assets/images/product/pro1.jpg" alt="Product"></a>
                                                 <div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>
@@ -358,49 +360,7 @@
                                     <div class="col-md-3">
                                         <div class="single-product-items">
                                             <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/p-1.jpg" alt="Product"></a>
-                                                <div class="product-discount-tag">
-                                                    <p>-60%</p>
-                                                </div>
-                                            </div>
-                                            <div class="product-item-content text-center mt-30">
-                                                <h5 class="product-title"><a href="#">Touchwood Chair</a></h5>
-                                                <ul class="rating">
-                                                    <li><i class="lni-star-filled"></i></li>
-                                                    <li><i class="lni-star-filled"></i></li>
-                                                    <li><i class="lni-star-filled"></i></li>
-                                                    <li><i class="lni-star-filled"></i></li>
-                                                </ul>
-                                                <span class="regular-price">$59.00</span>
-                                                <span class="discount-price">$69.00</span>
-                                            </div>
-                                        </div> <!-- single product items -->
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="single-product-items">
-                                            <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/p-2.jpg" alt="Product"></a>
-                                                <div class="product-discount-tag">
-                                                    <p>-60%</p>
-                                                </div>
-                                            </div>
-                                            <div class="product-item-content text-center mt-30">
-                                                <h5 class="product-title"><a href="#">Touchwood Chair</a></h5>
-                                                <ul class="rating">
-                                                    <li><i class="lni-star-filled"></i></li>
-                                                    <li><i class="lni-star-filled"></i></li>
-                                                    <li><i class="lni-star-filled"></i></li>
-                                                    <li><i class="lni-star-filled"></i></li>
-                                                </ul>
-                                                <span class="regular-price">$59.00</span>
-                                                <span class="discount-price">$69.00</span>
-                                            </div>
-                                        </div> <!-- single product items -->
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="single-product-items">
-                                            <div class="product-item-image">
-                                                <a href="#"><img src="assets/images/product/p-3.jpg" alt="Product"></a>
+                                                <a href="#"><img src="assets/images/product/pro3.jpg" alt="Product"></a>
                                                 <div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>
@@ -422,6 +382,48 @@
                                         <div class="single-product-items">
                                             <div class="product-item-image">
                                                 <a href="#"><img src="assets/images/product/p-1.jpg" alt="Product"></a>
+                                                <div class="product-discount-tag">
+                                                    <p>-60%</p>
+                                                </div>
+                                            </div>
+                                            <div class="product-item-content text-center mt-30">
+                                                <h5 class="product-title"><a href="#">Touchwood Chair</a></h5>
+                                                <ul class="rating">
+                                                    <li><i class="lni-star-filled"></i></li>
+                                                    <li><i class="lni-star-filled"></i></li>
+                                                    <li><i class="lni-star-filled"></i></li>
+                                                    <li><i class="lni-star-filled"></i></li>
+                                                </ul>
+                                                <span class="regular-price">$59.00</span>
+                                                <span class="discount-price">$69.00</span>
+                                            </div>
+                                        </div> <!-- single product items -->
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="single-product-items">
+                                            <div class="product-item-image">
+                                                <a href="#"><img src="assets/images/product/pro3.jpg" alt="Product"></a>
+                                                <div class="product-discount-tag">
+                                                    <p>-60%</p>
+                                                </div>
+                                            </div>
+                                            <div class="product-item-content text-center mt-30">
+                                                <h5 class="product-title"><a href="#">Touchwood Chair</a></h5>
+                                                <ul class="rating">
+                                                    <li><i class="lni-star-filled"></i></li>
+                                                    <li><i class="lni-star-filled"></i></li>
+                                                    <li><i class="lni-star-filled"></i></li>
+                                                    <li><i class="lni-star-filled"></i></li>
+                                                </ul>
+                                                <span class="regular-price">$59.00</span>
+                                                <span class="discount-price">$69.00</span>
+                                            </div>
+                                        </div> <!-- single product items -->
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="single-product-items">
+                                            <div class="product-item-image">
+                                                <a href="#"><img src="assets/images/product/pro2.jpg" alt="Product"></a>
                                                 <div class="product-discount-tag">
                                                     <p>-60%</p>
                                                 </div>
